[project]
name = "kiba-core"
version = "0.5.2"
description = "Kiba Labs' python utilities"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "pydantic>=2.10.6",
    "orjson>=3.10.15",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.0",
]
core-api = [
    "starlette>=0.45.3",
    "uvicorn[standard]>=0.34.0",
]
storage = [
    "aiobotocore>=2.19.0",
]
# TODO(krishan711): remove this in next major update
queues = [
    "aiobotocore>=2.19.0",
]
queue-sqs = [
    "aiobotocore>=2.19.0",
]
queue-aqs = [
    "azure-storage-queue[aio]>=12.12.0",
]
database-psql = [
    "sqlalchemy[asyncio]>=2.0.39",
    "asyncpg>=0.30.0",
]
database-sqlite = [
    "sqlalchemy[asyncio]>=2.0.39",
    "aiosqlite>=0.21.0",
]
requester = [
    "httpx>=0.28.1",
]
web3 = [
    "web3>=7.9.0",
]
types = [
    "types-aiobotocore[essential]>=2.19.0",
    "types-aiofiles>=24.1.0.20241221",
]

[dependency-groups]
dev = [
    "kiba-build==0.1.11.dev10",
    "pytest-only>=2.1.2",
]

[project.urls]
repository = "https://github.com/kibalabs/core-py"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
core = ["/py.typed", "**/config.toml"]
