[project]
name = "kiba-core"
version = "0.5.2"
description = "Kiba Labs' python utilities"
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "aiofiles>=25.1.0",
    "pydantic>=2.13.4",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.139.1",
    "uvicorn[standard]>=0.51.0",
]
core-api = [
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.51.0",
]
storage = [
    "aiobotocore>=3.7.0",
]
# TODO(krishan711): remove this in next major update
queues = [
    "aiobotocore>=3.7.0",
]
queue-sqs = [
    "aiobotocore>=3.7.0",
]
queue-aqs = [
    "azure-storage-queue[aio]>=12.17.0",
]
queue-cosmos = [
    "azure-cosmos>=4.16.2",
]
database-psql = [
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
]
database-sqlite = [
    "sqlalchemy[asyncio]>=2.0.51",
    "aiosqlite>=0.22.1",
]
requester = [
    "httpx>=0.28.1",
]
web3 = [
    "web3>=7.16.0",
]
types = [
    "types-aiobotocore[essential]>=3.7.0",
    "types-aiofiles>=25.1.0.20260518",
]

[dependency-groups]
dev = [
    "kiba-build==0.1.11.dev10",
]

[project.urls]
repository = "https://github.com/kibalabs/core-py"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
core = ["/py.typed", "**/config.toml"]
